# langgraph-playground

./: .env.example  .env.test  .gitignore  CLAUDE.md  Makefile  README.md  hello.py  pyproject.toml
app/: __init__.py  agent_demo.py  demo.py  main.py
app/agents/: __init__.py  openai_agent.py  openai_agents.py
app/api/: __init__.py  routes.py
app/client/: __init__.py  azure_openai_client.py  elasticsearch_client.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  llm_clients.py  registry.py
app/streaming/: __init__.py  agent_streaming.py
app/tools/: __init__.py  date_tool.py  webscraper_tool.py
documentation/: 000-Action-Plan.md  001-IMPL-Environment_Setup.md  001-T-IMPL-Project-Structure.md  001-TASK-Project-Structure.md  001-TASK_Agent_Framework_Integration.md  001-TASK_Environment_Setup.md  002-IMPL-Azure_OpenAI_Integration.md  002-T-IMPL-Settings-Configuration.md  002-TASK-Settings-Configuration.md  002-TASK_Azure_OpenAI_Integration.md  002-TASK_SmartSource_RAG_Agent.md  003-IMPL-Basic_OpenAI_Agent.md  003-T-IMPL-Azure-OpenAI-Integration.md  003-TASK-Azure-OpenAI-Integration.md  003-TASK_Basic_OpenAI_Agent.md  003-TASK_OpenAI_Agents.md  004-TASK-Tool-Implementations.md  004-TASK_Agent_Registry.md  004-TASK_Simple_Tools_Implementation.md  005-TASK-ReAct-Agent-Implementation.md  005-TASK_Asynchronous_API.md  005-TASK_OpenAI_Agent_With_Tools.md  006-TASK-Agent-Registry.md  006-TASK_Azure_OpenAI_Integration.md  006-TASK_LangGraph_Framework_Integration.md  007-TASK-FastAPI-Integration.md  007-TASK_Search_Tool.md  007-TASK_Streaming_Infrastructure.md  008-TASK-LangSmith-Integration.md  008-TASK_Enhanced_Retrieval_System.md  008-TASK_Retrieval_System.md  009-TASK-Testing-Infrastructure.md  009-TASK_Document_Processing.md  010-TASK-Documentation.md  010-TASK_Advanced_Search_Tool.md  010-TASK_Date_Tool.md  011-TASK_Advanced_Tool_Integration.md  011-TASK_Web_Scraping_Tool.md  012-TASK_Advanced_OpenAI_Agents.md  012-TASK_Environment_Setup.md  (+11 more)
tests/: .env.test  __init__.py  conftest.py  isolated_test_llm_clients.py  mock_settings.py  test_agents.py  test_api.py  test_llm_clients.py  test_mock_llm.py  test_settings.py  test_tools.py
tests/agents/: __init__.py  test_openai_agent.py  test_openai_agent_conftest.py  test_openai_agent_interfaces.py  test_openai_agent_tools.py
tests/client/: __init__.py  test_azure_openai_client.py  test_elasticsearch_client.py
tests/unit/: __init__.py  conftest.py  test_llm_clients.py
