[project]
name = "lg-playground"
version = "0.1.0"
description = "playground for LangGraph"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.1",
    "langsmith>=0.3.42",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
lint = [
    "black>=25.1.0",
    "ruff>=0.11.8",
]
